feat: реализовать метод existsByEmail